--- a/markdown/20220330.md
+++ b/markdown/20220330.md
@@ -27,7 +27,9 @@ Author: yen
 [Onshape]:https://www.onshape.com/en/
 [Tic-Tat-Toe]:https://mde.tw/cd2022_guide/content/Tic-Tat-Toe.html
 
-從 [uArm] 中的影片與下載檔案、uArm Developer Guide、uArm test kit 與 uFactory uArm 可以取得與 uArm 機械手臂相關的技術資料.
+從 [uArm] 中的影片與下載檔案、[uArm Developer Guide]、[uArm test kit] 與 [uFactory uArm] 可以取得與 [uArm] 機械手臂相關的技術資料.
 
-
-
+[uArm]:https://www.youtube.com/watch?v=OqPVK__z9Ek
+[uArm Developer Guide]:http://download.ufactory.cc/docs/en/uArm%20Swift%20Pro_Developer%20Guide%20v1.0.6.pdf
+[uArm test kit]:https://www.ufactory.cc/products/uarm-test-kit
+[uFactory uArm]:https://www.ufactory.cc/pages/uarm
