--- a/markdown/20220427.md
+++ b/markdown/20220427.md
@@ -13,7 +13,8 @@ Author: yen
 
 block_ui
 ----
-<p><link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"></p>
+利用變數調整尺寸
+<link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css">
 <script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"></script>
 <script>
 var winkVideoData_w10_block_ui = {
@@ -26,5 +27,5 @@ var winkVideoData_w10_block_ui = {
 };
 </script>
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" muted="true">
-<source src="/downloads/w10.mp4" type="video/mp4" /></video></div>
+<source src="./downloads/w10.mp4" type="video/mp4" /></video></div>
 
