--- a/markdown/20220427.md
+++ b/markdown/20220427.md
@@ -27,5 +27,5 @@ var winkVideoData_w10_block_ui = {
 };
 </script>
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" muted="true">
-<source src="downloads/w10.mp4" type="video/mp4" /></video></div>
+<source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /></video></div>
 
