--- a/markdown/20220413.md
+++ b/markdown/20220413.md
@@ -1,5 +1,5 @@
 ---
-Title: 2022 Spring CD 課程
+Title: W7
 Date: 2022-03-30 11:00
 Category: Misc
 Tags: 2022SpringCD
@@ -11,7 +11,7 @@ Author: yen
 
 <!-- PELICAN_END_SUMMARY -->
 
-w7
+編譯程式碼
 ----
 1.git clone [https://github.com/mdecourse/scarysim.git]
 
